# tabm

./: .gitattributes  .gitignore  Makefile  README.md  environment.yaml  example.ipynb  pyproject.toml  tabm.py  tabm_reference.py  test_code_blocks.py
exp/debug/: 0.toml
exp/mlp-periodic/adult/: 0-tuning.toml
exp/mlp-periodic/adult/0-evaluation/: 1.toml  11.toml  14.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-periodic/black-friday/: 0-tuning.toml
exp/mlp-periodic/churn/: 0-tuning.toml
exp/mlp-periodic/covtype2/: 0-tuning.toml
exp/mlp-periodic/diamond/: 0-tuning.toml
exp/mlp-periodic/microsoft/: 0-tuning.toml
exp/mlp-periodic/otto/: 0-tuning.toml
exp/mlp-periodiclite/black-friday/: 0-tuning.toml
exp/mlp-periodiclite/california/: 0-tuning.toml
exp/mlp-periodiclite/higgs-small/: 0-tuning.toml
exp/mlp-periodiclite/microsoft/: 0-tuning.toml
exp/mlp-periodiclite/otto/: 0-tuning.toml
exp/mlp-piecewiselinear/adult/: 0-tuning.toml
exp/mlp-piecewiselinear/black-friday/: 0-tuning.toml
exp/mlp-piecewiselinear/california/: 0-tuning.toml
exp/mlp-piecewiselinear/churn/: 0-tuning.toml
exp/mlp-piecewiselinear/covtype2/: 0-tuning.toml
exp/mlp-piecewiselinear/diamond/: 0-tuning.toml
exp/mlp-piecewiselinear/higgs-small/: 0-tuning.toml
exp/mlp-piecewiselinear/house/: 0-tuning.toml
exp/mlp-piecewiselinear/microsoft/: 0-tuning.toml
exp/mlp-piecewiselinear/otto/: 0-tuning.toml
exp/mlp/adult/: 0-tuning.toml
exp/mlp/black-friday/: 0-tuning.toml
exp/mlp/churn/: 0-tuning.toml
exp/mlp/diamond/: 0-tuning.toml
exp/mlp/higgs-small/: 0-tuning.toml
exp/mlp/otto/: 0-tuning.toml
exp/tabm-mini-piecewiselinear/adult/: 0-tuning.toml
exp/tabm-mini-piecewiselinear/black-friday/: 0-tuning.toml
exp/tabm-mini-piecewiselinear/california/: 0-tuning.toml
exp/tabm-mini-piecewiselinear/churn/: 0-tuning.toml
exp/tabm-mini-piecewiselinear/covtype2/: 0-tuning.toml
exp/tabm-mini-piecewiselinear/diamond/: 0-tuning.toml
exp/tabm-mini-piecewiselinear/higgs-small/: 0-tuning.toml
exp/tabm-mini-piecewiselinear/house/: 0-tuning.toml
exp/tabm-mini-piecewiselinear/microsoft/: 0-tuning.toml
exp/tabm-mini-piecewiselinear/otto/: 0-tuning.toml
exp/tabm-mini/adult/: 0-tuning.toml
exp/tabm-mini/black-friday/: 0-tuning.toml
exp/tabm-mini/california/: 0-tuning.toml
exp/tabm-mini/covtype2/: 0-tuning.toml
exp/tabm-mini/house/: 0-tuning.toml
exp/tabm-mini/microsoft/: 0-tuning.toml
exp/tabm-packed/black-friday/: 0-tuning.toml
exp/tabm-packed/covtype2/: 0-tuning.toml
exp/tabm-packed/diamond/: 0-tuning.toml
exp/tabm-packed/higgs-small/: 0-tuning.toml
exp/tabm-packed/house/: 0-tuning.toml
exp/tabm-packed/otto/: 0-tuning.toml
exp/tabm-piecewiselinear/adult/: 0-tuning.toml
exp/tabm-piecewiselinear/black-friday/: 0-tuning.toml
exp/tabm-piecewiselinear/california/: 0-tuning.toml
exp/tabm-piecewiselinear/churn/: 0-tuning.toml
exp/tabm-piecewiselinear/covtype2/: 0-tuning.toml
exp/tabm-piecewiselinear/diamond/: 0-tuning.toml
exp/tabm-piecewiselinear/higgs-small/: 0-tuning.toml
exp/tabm-piecewiselinear/house/: 0-tuning.toml
exp/tabm-piecewiselinear/microsoft/: 0-tuning.toml
exp/tabm-piecewiselinear/otto/: 0-tuning.toml
exp/tabm-sharetrainingbatches-mini-piecewiselinear/black-friday/: 0-tuning.toml
exp/tabm-sharetrainingbatches-mini-piecewiselinear/california/: 0-tuning.toml
exp/tabm-sharetrainingbatches-mini-piecewiselinear/diamond/: 0-tuning.toml
exp/tabm-sharetrainingbatches-mini-piecewiselinear/otto/: 0-tuning.toml
exp/tabm-sharetrainingbatches-mini/churn/: 0-tuning.toml
exp/tabm-sharetrainingbatches-mini/diamond/: 0-tuning.toml
exp/tabm-sharetrainingbatches-piecewiselinear/black-friday/: 0-tuning.toml
exp/tabm-sharetrainingbatches-piecewiselinear/churn/: 0-tuning.toml
exp/tabm-sharetrainingbatches-piecewiselinear/covtype2/: 0-tuning.toml
exp/tabm-sharetrainingbatches-piecewiselinear/otto/: 0-tuning.toml
exp/tabm-sharetrainingbatches/adult/: 0-tuning.toml
exp/tabm-sharetrainingbatches/house/: 0-tuning.toml
exp/tabm/adult/: 0-tuning.toml
exp/tabm/black-friday/: 0-tuning.toml
exp/tabm/higgs-small/: 0-tuning.toml
exp/tabm/house/: 0-tuning.toml
lib/: __init__.py  data.py  deep.py  env.py  metrics.py  util.py
paper/: README.md  environment.yaml  pixi.toml  pyproject.toml
paper/lib/: env.py
tools/: prepare_tabred.py
(+41497 files in other folders)
